# hyperspace_waves

./: COMPLETION_REPORT.md  DETECTION_AND_APPLICATIONS.md  README.md  SUMMARY.md  UBT_ANALYSIS.md
workspace-gnu-radio-python/.metadata/: version.ini
workspace-gnu-radio-python/.metadata/.mylyn/.taskListIndex/: segments_1
workspace-gnu-radio-python/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
workspace-gnu-radio-python/.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
workspace-gnu-radio-python/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
workspace-gnu-radio-python/gr-hyperspace_comm/: CMakeLists.txt  MANIFEST.md
workspace-gnu-radio-python/gr-hyperspace_comm/cmake/Modules/: hyperspace_commConfig.cmake
workspace-gnu-radio-python/gr-hyperspace_comm/docs/: README.hyperspace_comm
workspace-gnu-radio-python/gr-hyperspace_comm/docs/doxygen/: Doxyfile.in
workspace-gnu-radio-python/gr-hyperspace_comm/grc/: CMakeLists.txt  hyperspace_comm_mfft_fc.xml
workspace-gnu-radio-python/gr-hyperspace_comm/include/hyperspace_comm/: CMakeLists.txt
workspace-gnu-radio-python/gr-hyperspace_comm/lib/: CMakeLists.txt  qa_hyperspace_comm.cc  qa_hyperspace_comm.h  test_hyperspace_comm.cc
workspace-gnu-radio-python/gr-hyperspace_comm/python/: .mfft_fc.py.swp  .qa_mfft_fc4.py.swp  CMakeLists.txt  __init__.py  mfft_fc.py  mfft_fc.py~  qa_mfft_fc.py  qa_mfft_fc2.py  qa_mfft_fc4.py
workspace-gnu-radio-python/gr-hyperspace_comm/python/old_qa/: qa_mfft_fc.py  qa_mfft_fc2.py  qa_mfft_fc3.py
workspace-gnu-radio-python/gr-hyperspace_comm/swig/: hyperspace_comm_swig.i
workspace-gnu-radio/.metadata/: version.ini
workspace-gnu-radio/.metadata/.mylyn/.taskListIndex/: segments_1
workspace-gnu-radio/.metadata/.plugins/org.eclipse.cdt.core/: gr-hyperspace_comm.1472332902310.pdom  gr-hyperspace_comm.1472334016062.pdom  gr-hyperspace_comm.language.settings.xml  hyperspace_waves.language.settings.xml
workspace-gnu-radio/gr-hyperspace_comm/: .cproject  .project  CMakeLists.txt  MANIFEST.md
workspace-gnu-radio/gr-hyperspace_comm/grc/: CMakeLists.txt  hyperspace_comm_mfft.xml
workspace-gnu-radio/gr-hyperspace_comm/lib/: CMakeLists.txt  mfft_impl.cc  mfft_impl.h  qa_hyperspace_comm.cc  qa_mfft.cc  qa_mfft.h
workspace-gnu-radio/gr-hyperspace_comm/python/: CMakeLists.txt  __init__.py  qa_mfft.py
workspace-gnu-radio/gr-hyperspace_comm/swig/: CMakeLists.txt  hyperspace_comm_swig.i
workspace-pydev/.metadata/: version.ini
workspace-pydev/generator/: generate.py
workspace-pydev/hyperspace_comm/: .project  applications.py  demo_ubt.py  detection.py
workspace-pydev/hyperspace_comm/biquaternion/: __init__.py  biquaternion.py  theta_functions.py  wave_bq.py
workspace-pydev/hyperspace_comm/generator/: generate.py
workspace-pydev/hyperspace_comm/test/: test.py  test_biquaternion.py
workspace-pydev/hyperspace_comm/transform/: transform.py
(+94 files in other folders)
